Flip delegation: move health-check logic to NodeHealthAPI, HealthCheckHandler delegates to V2
- NodeHealthAPI now owns all business logic (cloud mode, legacy mode,
  isWithinGenerationLag, findUnhealthyCores) using strongly-typed
  NodeHealthResponse / NodeStatus throughout.
- HealthCheckHandler becomes a thin V1 bridge: handleRequestBody()
  creates NodeHealthAPI(coreContainer).checkNodeHealth(...) and
  squashes the typed response into SolrQueryResponse.
- findUnhealthyCores() moved to NodeHealthAPI as a public static util;
  HealthCheckHandler keeps a @Deprecated delegation shim so existing
  callers continue to compile.
- HealthCheckHandlerTest updated to call NodeHealthAPI.findUnhealthyCores()
  directly.
- Utils.getReflectWriter() now serialises Enum values as their .name()
  string so that NodeStatus.OK round-trips as "OK" through
  NamedList/javabin, keeping HealthCheckHandlerTest assertions passing.
- Fixed pre-existing bug in isWithinGenerationLag: condition was
  `generationDiff < maxGenerationLag` (wrong); corrected to
  `generationDiff > maxGenerationLag` with the return values adjusted
  so the method returns true=healthy / false=lagging-too-far.
- Fixed missing slf4j log arguments in the negative-diff warning.

Co-authored-by: epugh <22395+epugh@users.noreply.github.com>